# pysrat

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: release.yml
cppsrc/: em_exp.cpp  em_gamma.cpp  em_llogis.cpp  em_lnorm.cpp  em_pareto.cpp  em_tlogis.cpp  em_tnorm.cpp  gumbel.h  lxvmax.cpp  txvmin.cpp
csrc/: logistic.h  numlib.c  srat_core.c  srat_core.h
csrc/basic/: basic_pybind.cpp  em_exp.cpp  em_lnorm.cpp  em_tnorm.cpp  em_txvmax.cpp  gumbel.cpp  lxvmin.cpp
csrc/cf1/: blas1_span.h  blas2_span.h  mexp_span.h  poisson.cpp  poisson.h
csrc/glm/: bind_binomial.cpp  bind_binomial_elasticnet.cpp  bind_common.h  bind_glm.h  bind_glm_binomial.cpp  bind_glm_poisson.cpp  bind_glmnet_binomial.cpp  bind_glmnet_poisson.cpp  glm_binomial.cpp  glm_binomial.h  glm_binomial_elasticnet.h  glm_binomial_elasticnet_with_intercept.cpp  glm_binomial_elasticnet_without_intercept.cpp  glm_binomial_with_intercept.cpp  glm_binomial_without_intercept.cpp  glm_poisson.cpp  glm_poisson.h  glm_poisson_elasticnet.h  glm_poisson_elasticnet_with_intercept.cpp  glm_poisson_elasticnet_without_intercept.cpp  glm_poisson_with_intercept.cpp  glm_poisson_without_intercept.cpp  link_eval.h  pybindings.cpp  pybindings_module.cpp
csrc/irls/: irls.cpp
csrc/utils/: gauss_inte.h  logistic.c  norm.c  norm.h  numlib.h
docs/: models.md
examples/: exampl1.ipynb  exampl2.ipynb  example1.ipynb  example2.ipynb  example3.ipynb  example4.ipynb
phsrc/: blas2_span.h  cf1_pybind.cpp  cf1utils_span.h  mexp.h  poisson.h
src/: bindings.cpp  em_exp.cpp
src/pysrat/: __init__.py  _em.py  base.py  bootstrap.py  data.py  emfit.py  factory.py  fit.py  nhpp.py  options.py  plot.py  result.py
src/pysrat/data/: __init__.py  dmetrics.py  nhpp.py  smetrics.py
src/pysrat/datasets/dmetrics/: dmetrics1.csv  dmetrics2.csv  dmetrics3.csv
src/pysrat/datasets/smetrics/: tomcat5_catalina.csv  tomcat5_connector.csv  tomcat5_jasper.csv  tomcat5_servlets.csv  tomcat5_smetrics.csv  tomcat5_tester.csv  tomcat5_webapps.csv
src/pysrat/dists/: __init__.py  cf1.py  exp.py  gamma.py  gumbel.py  lgumbel.py  llogis.py  lnorm.py  pareto2.py  tgumbel.py  tlogis.py  tnorm.py
src/pysrat/models/: _utils.py  cf1.py  exp.py  gamma.py  llogis.py  lnorm.py  lxvmax.py  lxvmin.py  pareto2.py  tlogis.py  tnorm.py  txvmax.py  txvmin.py
src/pysrat/nhpp/: __init__.py  _base.py  _em.py  base.py  bootstrap.py  data.py  fit.py  plot.py  stepwise.py
src/pysrat/nhpp/dists/: __init__.py  cf1.py  lgumbel.py  llogis.py  pareto2.py  tnorm.py
src/pysrat/nhpp/models/: __init__.py  _utils.py  cf1.py  dglm.py  exp.py  gamma.py  llogis.py  lnorm.py  lxvmax.py  lxvmin.py  pareto2.py  tlogis.py  tnorm.py  txvmax.py  txvmin.py
src/pysrat/nhpp/multifactor/: __init__.py  _dglm.py  cloglog.py  logit.py  probit.py
src/pysrat/nhpp/regression/: __init__.py  pr_nhpp.py
src/pysrat/regression/: __init__.py  _binomial_validation.py  glm_binomial.py  glm_binomial_elasticnet.py  glm_poisson.py  glm_poisson_elasticnet.py  glmnet_binomial.py  glmnet_poisson.py
tests/: test_cf1.py  test_cf1_impl.py  test_core.py  test_data.py  test_datasets.py  test_dglm.py  test_dists.py  test_eic.py  test_emstep.py  test_exp.py  test_exponential.py  test_llogis.py  test_lnorm.py  test_lxvmax.py  test_lxvmin.py  test_pareto2.py  test_pr_nhpp.py  test_regression.py  test_regression_elastic.py  test_stepwise.py  test_tlogis.py  test_tnorm.py  test_txvmax.py  test_txvmin.py
